# embedded_sensing_systems_lit_review

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  db_schema.py  lit_review.db  llm_assistant.py  populate_db.py  pyproject.toml  sync_db.py
coding/: .gitignore  CLAUDE.md  README.md  app.py  batch_chat.py  db.py  gpu_server.py  gpu_server_config.json  llm.py  matrix-papers.txt  pyproject.toml  schema.py  style-guide-vue.html  sync_db.py
coding/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
coding/frontend/src/: App.vue  main.js
coding/frontend/src/api/: index.js
coding/frontend/src/assets/: app.css
coding/frontend/src/components/: AnnotationList.vue  AnnotationOverlay.vue  AppNavbar.vue  ChatPanel.vue  CodeBuilderModal.vue  CodeSelector.vue  ColumnEditorModal.vue  DetailPanel.vue  MarkdownNote.vue  MatrixView.vue  PaperDetails.vue  PaperList.vue  PaperListItem.vue  PdfToolbar.vue  PdfViewer.vue  RichTextEditor.vue  ScreeningPanel.vue  ThemesView.vue  ToastContainer.vue  WorkspaceLayout.vue
coding/frontend/src/composables/: useDebounce.js  useKeyboard.js  usePdf.js
coding/frontend/src/stores/: chat.js  codebook.js  matrix.js  ui.js  workspace.js
coding/prompts/: coding_batch.md
coding/static/css/: app.css
coding/static/js/: app.js
coding/templates/: index.html
docs/: data.json  index.html  style.css
prompts/: exclusion_criteria.md  inclusion_criteria.md  pass1_user_prompt.md  pass2_user_prompt.md  system_prompt.md
scripts/: batch_review.py  export_bibtex.py  export_progress.py  (+3 more)
web/: app.py  (+2 more)
(+56 files in other folders)
