[project]
name = "lit-review-coding"
version = "0.1.0"
description = "Web app for PDF coding in systematic literature review"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
    "pywebview>=5.0",
    "pymupdf>=1.25.0",
    "ollama>=0.4.0",
    "claude-agent-sdk>=0.1.53",
]

[project.scripts]
lit-review-coding = "app:main"
